クライアントにユーザネームと部屋名を入力させる

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<title>Sample of websocket with golang</title>
-		<script type="text/javascript" src="script.js"></script>
-	</head>
+	<script type="text/javascript" src="script.js"></script>
 	<body>
+		<div id = "entrance">
+			room name:<input id="roomName" type="text"><br>
+			your name:<input id="userName" type="text"><br>
+			<input type="button" id="enterBtn" value="enter" onclick="enter()"></input>
+		</div>
+		<div id = "chat" style="display: none">
 			<input id="box" type="text">
 			<input type="button" id="sendBtn" value="send"></input>
-      <ul id="list"></ul>
+			<ul id="list"></ul>
+		</div>
 	</body>
 </html>
